# dsc-dlt-lamp

./: discord_deleter.py  fix-venv.sh  install.bat  install.sh  main.py  pyproject.toml  setup-vps.sh
